k8s/apps/ballroom-competition-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ballroom-competition-web
  namespace: web
spec:
  selector:
    app: ballroom-competition-web
  ports:
    - port: 80
      targetPort: 3001
      protocol: TCP
  type: ClusterIP
